--- a/emp_backend/src/main/resources/application.properties
+++ b/emp_backend/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/emp
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_management
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password= "\\enter your password"
+spring.datasource.password= Rohan@9948***
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 
 spring.jpa.hibernate.ddl-auto = update
+spring.sql.init.mode=always
